@@ -1,6 +1,1 @@
-# JVM 配置选项
--Xmx1024m
--Xms512m
--XX:MaxPermSize=256m
 -Dfile.encoding=UTF-8
--Djava.awt.headless=true
